--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/app/src/test/
+/app/src/androidTest/
 .DS_Store
 /build
 /captures
