--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@drawable/file_explorer_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/file_explorer_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".FileListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
